Prevent content from overflowing #page-content

--- a/style.css
+++ b/style.css
@@ -189,7 +189,9 @@ figure {
 	position: relative;
 	margin: -112px 0 48px 0;
 	padding: 48px;
+	box-sizing: border-box;
 	width: 100%;
+	overflow: hidden;
 	border-radius: 2px;
 	box-shadow: 0 3px 1px -2px rgba(0,0,0,0.2), 0 2px 2px 0 rgba(0,0,0,0.14), 0 1px 5px 0 rgba(0,0,0,0.12);
 }
